# cs_4_hh_vacancies

./: .gitignore  README.md  main.py  pyproject.toml
src/: api.py  functions.py  vacancy.py  vacancy_manager.py
