[tool.poetry]
name = "cw-4-hh-vacancies"
version = "0.1.0"
description = ""
authors = ["Alina Salakhova <alina.salakhova1991@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
